# allowance-tracker

./: .commit_message_temp  .cursorrules  .gitignore  CALENDAR_SCALING_INVESTIGATION.md  CALENDAR_VERTICAL_SPACE_INVESTIGATION.md  Cargo.toml  DATA_LOCATION.md  DELETE_TRANSACTIONS_IMPLEMENTATION_PLAN.md  EGUI_UPGRADE_PLAN.md  GIT_VERSIONING_IMPLEMENTATION_PLAN.md  GOALS_IMPLEMENTATION_PLAN.md  GOAL_CARD_REDESIGN_PLAN.md  PARENTAL_CONTROL_DETAILED_PLAN 2.md  PERIODIC_REFRESH_IMPLEMENTATION_PLAN.md  README.md  REFRESH_FEATURE.md  REST_API_REFACTORING_PLAN.md  SQLITE_TO_CSV_MIGRATION.md  STATE_REFACTOR_LESSONS_LEARNED.md  SYSTEMATIC_CLEANUP_PLAN.md  UI_CLEANUP_PHASE4_PLAN.md  UI_MODULE_REORGANIZATION_PLAN.md  VISUAL_TRANSFORMATION_PLAN.md  app_logs_june_test.txt  app_logs_phase1.txt  app_logs_phase1_debug.txt  banner-design-examples.html  cleanup_commit.txt  commit-message.txt  commit_message.txt  commit_message_temp.txt  commit_msg_tmp.txt  debug_output.txt  email_config.toml  failed_attempts_to_fix_calendar.md  header_design_samples.html  june_fix_test.txt  keyvalue.db-shm  keyvalue.db-wal  modular_migration_commit.txt  (+8 more)
backend/: Cargo.toml  mod.rs
backend/domain/: allowance_service.rs  balance_service.rs  calendar.rs  child_service.rs  commands.rs  data_directory_service.rs  email_config_service.rs  email_service.rs  export_service.rs  goal_service.rs  mod.rs  money_management.rs  parental_control_service.rs  transaction_service.rs  transaction_table.rs
backend/domain/models/: allowance.rs  goal.rs  mod.rs  parental_control_attempt.rs  transaction.rs
backend/src/: db.rs  domain.rs  main.rs  rest.rs
backend/storage/: mod.rs  traits.rs
backend/storage/csv/: README.md  allowance_repository.rs  child_repository.rs  connection.rs  csv_allowance_repository.rs  csv_child_repository.rs  csv_goal_repository.rs  csv_parental_control_repository.rs  csv_transaction_repository.rs  global_config_repository.rs  goal_repository.rs  mod.rs  parental_control_repository.rs  test_utils.rs  transaction_repository.rs
backend/storage/git/: mod.rs
egui-frontend/: Cargo.toml  app_logs.txt  app_logs2.txt  app_logs_debug.txt  app_logs_debug_june.txt  app_logs_debug_june2.txt  june_debug_full.txt
egui-frontend/src/: app.rs  app.rs.bak  lib.rs  main.rs
egui-frontend/src/ui/: app_coordinator.rs  app_coordinator.rs.bak  app_implementation.rs  app_state.rs  fonts.rs  fonts.rs.bak  mappers.rs  mappers.rs.bak  mod.rs  mod.rs.bak
egui-frontend/src/ui/components/: calendar_renderer.rs  chart_renderer.rs  data_loading.rs  data_loading.rs.bak  dropdown_menu.rs  dropdown_menu.rs.bak  goal_renderer.rs  header.rs  header.rs.bak  mod.rs  modals.rs  styling.rs  tab_manager.rs  tab_manager.rs.bak  table_renderer.rs  table_renderer.rs.bak  theme.rs  transaction_table.rs  transaction_table.rs.bak  ui_components.rs  ui_components.rs.bak
egui-frontend/src/ui/components/calendar_renderer/: interactions.rs  layout.rs.bak  mod.rs  mod.rs.bak  navigation.rs  navigation.rs.bak  rendering.rs  rendering.rs.bak  styling.rs  types.rs  types.rs.bak
egui-frontend/src/ui/components/circular_days_progress/: calculations.rs  mod.rs  renderer.rs
egui-frontend/src/ui/components/goal_progress_bar/: layout.rs  mod.rs  progress_bar.rs
egui-frontend/src/ui/components/goal_progress_graph/: data_preparation.rs  graph_renderer.rs  mod.rs
egui-frontend/src/ui/components/modals/: child_selector.rs  child_selector.rs.bak  day_action_overlay.rs  goal_creation.rs  mod.rs  money_transaction.rs  parental_control.rs  parental_control.rs.bak  profile.rs
egui-frontend/src/ui/components/settings/: allowance_config_modal.rs  create_child_modal.rs  data_directory_modal.rs  export_modal.rs  mod.rs  profile_modal.rs  shared.rs  state.rs
egui-frontend/src/ui/components/styling/: colors.rs  colors.rs.bak  functions.rs  functions.rs.bak  mod.rs  mod.rs.bak  (+1 more)
egui-frontend/src/ui/state/: app_state.rs  app_state.rs.bak  calendar_state.rs  chart_state.rs  form_state.rs.bak  goal_state.rs  interaction_state.rs.bak  mod.rs  mod.rs.bak  modal_state.rs  modal_state.rs.bak  table_state.rs  ui_state.rs  ui_state.rs.bak
egui-frontend/test_data_1752443142071/test_child/: child.yaml  transactions.csv
egui-frontend/test_data_1752444651011/test_child/: child.yaml  transactions.csv
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: lib.rs  main.rs
frontend/src/components/: allowance_config_modal.rs  calendar.rs  challenge_modal.rs  child_selector_menu.rs  create_child_modal.rs  data_directory_modal.rs  date_picker.rs  export_modal.rs  goal_card.rs  header.rs  mod.rs  profile_modal.rs  settings_menu.rs  setup_wizard_modal.rs  simple_calendar.rs
frontend/src/components/forms/: add_money_form.rs  mod.rs  spend_money_form.rs
frontend/src/components/transactions/: mod.rs  rust_chart.rs  transaction_table.rs  transaction_view_container.rs
frontend/src/hooks/: mod.rs  use_active_child.rs  use_allowance.rs  use_calendar.rs  use_interaction_detector.rs  use_periodic_refresh.rs  use_transactions.rs
frontend/src/services/: api.rs  date_utils.rs  logging.rs  mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
src-tauri/: Cargo.toml  TESTING_GUIDE.md  debug_balance_test.rs  debug_test  debug_test.rs  keyvalue.db.backup  tauri.conf.json  temp_test.rs
src-tauri/data/: child::1750206432329_transactions.csv
src-tauri/data/TestChild/: transactions.csv
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/backend/: domain.rs  mod.rs  rest.rs  tests.rs
src-tauri/src/backend/domain/: allowance_service.rs  balance_service.rs  calendar.rs  child_service.rs  commands.rs  data_directory_service.rs  domain.rs  export_service.rs  goal_service.rs  mod.rs  money_management.rs  parental_control_service.rs  transaction_service.rs  transaction_table.rs  transactions.rs
src-tauri/src/backend/io/: mod.rs  rest.rs
src-tauri/src/backend/storage/: connection.rs  db.rs  mod.rs  traits.rs
src-tauri/test_data_1752290890316/unknown_child_testchild/: transactions.csv
src-tauri/test_data_1752292574129/: global_config.yaml
(+59 files in other folders)
