[workspace]
resolver = "2"
members = [
    "frontend",
    "shared",
    "src-tauri",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "time", "uuid"] }
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4", "js"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
