[package]
name = "allowance-tracker-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
time.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
once_cell = "1.19"
lazy_static = "1.4"
