[package]
name = "allowance-tracker-egui"
version = "0.1.0"
edition = "2021"
description = "A fun and engaging allowance tracker for kids - egui frontend"

# Exclude this from the main workspace
[workspace]

[dependencies]
# egui framework and platform integration
eframe = { version = "0.28", features = ["wgpu", "persistence"] }
egui = "0.28"
egui_extras = { version = "0.28", features = ["all_loaders", "datepicker", "image"] }

# Local dependencies
shared = { path = "../shared" }

# Date and time handling with full features for backend compatibility
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }

# Error handling and utilities
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"

# Serialization for persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# CSV file handling
csv = "1.3"

# Platform-specific file operations
directories = "5.0"
fs_extra = "1.3"

# Async trait support (even though we're converting to sync, some dependencies still need it)
async-trait = "0.1"
dirs = "6.0.0"

# Git integration - temporarily removed to avoid OpenSSL build issues
# git2 = "0.19"

[profile.dev]
opt-level = 1  # Faster debug builds for better egui performance

[profile.release]
opt-level = 3
lto = true     # Link-time optimization for smaller binaries 
