[package]
name = "allowance-tracker-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlSelectElement", "HtmlFormElement", "FormData"] }
gloo = { version = "0.10", features = ["net", "futures"] }
wasm-bindgen-futures = "0.4"
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
time.workspace = true
anyhow.workspace = true
js-sys = "0.3"
