[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4", "js"] }
chrono = { version = "0.4", features = ["serde"] }
