[package]
name = "allowance-tracker-tauri"
version = "0.1.0"
description = "Allowance Tracker Desktop App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["cdylib", "rlib"]



[build-dependencies]
tauri-build = { version = "2.2.0", features = ["codegen"] }

[dependencies]
# Tauri dependencies
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = ["protocol-asset"] }
tauri-plugin-log = "2.4.0"
tauri-plugin-dialog = "2.3.0"
dirs = "5.0"

# Backend dependencies (embedded)
shared = { path = "../shared" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
time.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
once_cell = "1.19"
lazy_static = "1.4"
async-trait = "0.1.88"
csv = "1.3.1"
serde_yaml = "0.9"
git2 = { version = "0.20", default-features = false }
fs_extra = "1.3"
[dev-dependencies]
tempfile = "3.8"
